added links, new block and content

--- a/contact.html
+++ b/contact.html
@@ -82,7 +82,15 @@
             </div>
             <div class="row">
                  <div class="col-lg-8 col-lg-offset-2">
-		<p>Калі ласка пры афрмленні на забудзьце дадаць свой паштовы</p>
+		<p>Калі вы хочаце:</p>
+<ul>
+<li><strong>Замовіць тавар.</strong> Пазначце (1) назву тавару, (2) кошт, (3) колькасць (4) і ваш кантакт, а таксама (5) адрас, калі вы чакаеце тавар па пошце. Падрабязней чытайце на старонцы <a href="tos.html" target="_blank">правілаў</a>.</li>
+<li><strong>Адправіць паведамленне.</strong> Проста напішыце паведамленне</li>
+</ul>
+
+
+
+
 </div>  
                 <div class="col-lg-8 col-lg-offset-2">
                     <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
