--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
                         <a class="page-scroll" href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">Пра нас</a>
+                        <a class="page-scroll" href="about.html">Пра нас</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Падпіска</a>
+                        <a class="page-scroll" href="#padpiska">Падпіска</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Вялікі брат</a>
+                        <a class="page-scroll" href="https://falanster.by" target="_blank">Вялікі брат</a>
                     </li>
                 </ul>
             </div>
@@ -73,8 +73,10 @@
 
 
     <!-- Image Background Page Header -->
-    <!-- Note: The background image is set within the business-casual.css file. -->
-    <header class="business-header">
+    <!-- Note: The background image is set within the business-casual.css file.
+
+
+
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -82,9 +84,34 @@
                 </div>
             </div>
         </div>
+
+ -->
+    <header class="business-header">
+
+
+
+
+<!-- Donate block -->
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+
+			<h2 class="page-header">Для пачатку працы крамы збіраем замоваў на суму 100 рублёў</h2>
+
+			<div class="caption">
+						        <h3 class="pull-right">100 рублёў для старта</h3>
+						        <h3>Замаўляй нішцякі!</h3>
+					</div>  
+			<div class="progress">
+			  <div class="progress-bar progress-bar-success" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+				Сабрана 35 рублёў. Паднажмем!
+			  </div>
+			</div>
+                </div>
+            </div>
+        </div>
+<!-- END Donate block -->
     </header>
-
-
 
 <!-- Page Content -->
     <div class="container">
@@ -105,11 +132,11 @@
             <div class="col-md-4 portfolio-item">
 		<div class="caption">
                                 <h3 class="pull-right">$74.99</h3>
-                                <h3><a href="#">Назва тавара</a>
+                                <h3><a href="product-1.html">Назва тавара</a>
                                 </h3>
                 </div>                
 
-                <a href="#">
+                <a href="product-1.html">
                     <img class="img-responsive" src="http://placehold.it/700x400" alt="">
                 </a>
 
@@ -118,11 +145,11 @@
             <div class="col-md-4 portfolio-item">
 		<div class="caption">
                                 <h3 class="pull-right">$74.99</h3>
-                                <h3><a href="#">Назва тавара</a>
+                                <h3><a href="product-2.html">Назва тавара</a>
                                 </h3>
                 </div>                
 
-                <a href="#">
+                <a href="product-2.html">
                     <img class="img-responsive" src="http://placehold.it/700x400" alt="">
                 </a>
 
@@ -131,11 +158,11 @@
             <div class="col-md-4 portfolio-item">
 		<div class="caption">
                                 <h3 class="pull-right">$74.99</h3>
-                                <h3><a href="#">Назва тавара</a>
+                                <h3><a href="product-3.html">Назва тавара</a>
                                 </h3>
                 </div>                
 
-                <a href="#">
+                <a href="product-3.html">
                     <img class="img-responsive" src="http://placehold.it/700x400" alt="">
                 </a>
 
@@ -151,11 +178,11 @@
 <div class="col-md-4 portfolio-item">
 		<div class="caption">
                                 <h3 class="pull-right">$74.99</h3>
-                                <h3><a href="#">Назва тавара</a>
+                                <h3><a href="product-4.html">Назва тавара</a>
                                 </h3>
                 </div>                
 
-                <a href="#">
+                <a href="product-4.html">
                     <img class="img-responsive" src="http://placehold.it/700x400" alt="">
                 </a>
 
@@ -164,11 +191,11 @@
             <div class="col-md-4 portfolio-item">
 		<div class="caption">
                                 <h3 class="pull-right">$74.99</h3>
-                                <h3><a href="#">Назва тавара</a>
+                                <h3><a href="product-5.html">Назва тавара</a>
                                 </h3>
                 </div>                
 
-                <a href="#">
+                <a href="product-5.html">
                     <img class="img-responsive" src="http://placehold.it/700x400" alt="">
                 </a>
 
@@ -177,11 +204,11 @@
             <div class="col-md-4 portfolio-item">
 		<div class="caption">
                                 <h3 class="pull-right">$74.99</h3>
-                                <h3><a href="#">Назва тавара</a>
+                                <h3><a href="product-6.html">Назва тавара</a>
                                 </h3>
                 </div>                
 
-                <a href="#">
+                <a href="product-6.html">
                     <img class="img-responsive" src="http://placehold.it/700x400" alt="">
                 </a>
 
@@ -206,34 +233,49 @@
 
 
  <!-- Call to Action Section -->
-        <div class="well">
+        <div class="well" id="padpiska">
             <div class="row">
 
  <div class="col-lg-12">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, expedita, saepe, vero rerum deleniti beatae veniam harum neque nemo praesentium cum alias asperiores commodi.</p>
+                    <p>Падпішыцеся! Мы будзем трымаць вас у курсе пра абнаўленні асартымента, зніжкі, акцыі і наогул жыццё нашай <a href="https://falanster.by" target="_blank">суполкі</a>. Рассылка адбываецца не часцей чым раз на месяц.</p>
                 </div>
 
 
                 <div class="col-lg-12">
 
-<form class="form-inline">
+
+<form action="//falanster.us6.list-manage.com/subscribe/post?u=a85c8705ea30c06ccde479258&amp;id=19b97f6d12" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate form-inline" target="_blank" novalidate>
+
     <div class="form-group input-group-lg">
         <label class="sr-only" for="inputEmail">Email*</label>
-        <input type="email" class="form-control" id="inputEmail" placeholder="Email*">
+	<input type="email" value="" name="EMAIL" class="required email form-control" id="mce-EMAIL" placeholder="Email*">
     </div>
 
     <div class="form-group input-group-lg">
         <label class="sr-only" for="inputEmail">Імя</label>
-        <input type="email" class="form-control" id="inputEmail" placeholder="Імя">
+	<input type="text" value="" name="FNAME" class="form-control" id="mce-FNAME" placeholder="Імя">
     </div>
 
     <div class="form-group input-group-lg">
         <label class="sr-only" for="inputEmail">Прозвішча</label>
-        <input type="email" class="form-control" id="inputEmail" placeholder="Прозвішча">
+	<input type="text" value="" name="LNAME" class="form-control" id="mce-LNAME"  placeholder="Прозвішча">
     </div>
-       
-    <button type="submit" class="btn btn-lg btn-default">Падпісацца</button>
+    <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-lg btn-default">
+
+
+<div id="mce-responses" class="clear">
+		<div class="response" id="mce-error-response" style="display:none"></div>
+		<div class="response" id="mce-success-response" style="display:none"></div>
+	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+        <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_a85c8705ea30c06ccde479258_19b97f6d12" tabindex="-1" value=""></div>
+
+<!--	<button type="submit" class="btn btn-lg btn-default">Падпісацца</button>-->
 </form>
+
+
+<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+<!--End mc_embed_signup-->
+
 
                 </div>
             </div>
@@ -254,13 +296,16 @@
                     <ul class="nav navbar-nav navbar-right">
                     <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
                     <li>
-                        <a class="page-scroll" href="#about">Пра нас</a>
+                        <a class="page-scroll" href="about.html">Пра нас</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">FAQ</a>
+                        <a class="page-scroll" href="tos.html#faq">FAQ</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Правілы сайта</a>
+                        <a class="page-scroll" href="tos.html#rule">Правілы сайта</a>
+                    </li>
+		    <li>
+                        <a class="page-scroll" href="contact.html">Кантакт</a>
                     </li>
                 </ul>
                 </div>
