--- a/product-1.html
+++ b/product-1.html
@@ -76,9 +76,12 @@
         <!-- Portfolio Item Heading -->
         <div class="row">
             <div class="col-lg-12">
+<div class="caption-product">
+		<h1 class="pull-right">100 руб.</h1>
                 <h1 class="page-header">Тавар такіта... 
-                    <small>Зніжкі! Акцыі! Плюшкі!</small>
+                    <small>Зніжкі!</small>
                 </h1>
+</div>
             </div>
         </div>
         <!-- /.row -->
@@ -87,7 +90,7 @@
         <div class="row">
 
             <div class="col-md-8">
-                <p><img class="img-responsive my-1" src="http://placehold.it/750x500" alt=""></p>
+                <p><img class="img-responsive" src="http://placehold.it/750x500" alt=""></p>
 		<p><img class="img-responsive" src="http://placehold.it/750x500" alt=""></p>
 		<p><img class="img-responsive" src="http://placehold.it/750x500" alt=""></p>
             </div>
