--- a/tos.html
+++ b/tos.html
@@ -68,7 +68,7 @@
 
 
     <!-- Image Background Page Header -->
-    <!-- Note: The background image is set within the business-casual.css file. -->
+    <!-- Note: The background image is set within the business-casual.css file.
     <header class="business-header">
         <div class="container">
             <div class="row">
@@ -77,7 +77,7 @@
                 </div>
             </div>
         </div>
-    </header>
+    </header> -->
 
 
 
@@ -88,20 +88,58 @@
  <!-- Features Section -->
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="page-header">Як мы працуем</h2>
+                <h2 class="page-header" id="rule">Як мы працуем</h2>
             </div>
             <div class="col-md-6">
-                <p>The Modern Business template by Start Bootstrap includes:</p>
-                <ul>
-                    <li><strong>Bootstrap v3.3.7</strong>
-                    </li>
-                    <li>jQuery v1.11.1</li>
-                    <li>Font Awesome v4.2.0</li>
-                    <li>Working PHP contact form with validation</li>
-                    <li>Unstyled page elements for easy customization</li>
-                    <li>17 HTML pages</li>
-                </ul>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, omnis doloremque non cum id reprehenderit, quisquam totam aspernatur tempora minima unde aliquid ea culpa sunt. Reiciendis quia dolorum ducimus unde.</p>
+
+<h3 id="faq">Правілы</h3>
+
+<p>Мы можам шчаслівых спажыўцоў. Калі вы лічыце што нешта вам не падыходзіць мы гатовы памяняць на іншы. Толькі закантактуйцеся з намі і мы дапаможам вырашыць сітуацыю.</p>
+
+<h3>Частыя пытанні</h3>
+
+<h4>Ці магчыма атрымаць тавар у рэале?</h4>
+<ol>
+        <li>абірайце тавары.</li>
+	<li>праз форму <a href="contact.html" target="_blank">"Звязацца з намі"</a> адпраўляеце сваю замову.</li>
+	<li>пасля мы звяжамся з вамі і пацвердзім наяўнасць тавараў.</li>
+	<li>забраць тавар можна па <a href="https://falanster.by/be/kantakt" target="_blank">адрасу</a>. Мінск, вул. Захарава 77а, пам 2б</li>
+	<li>звычайна мы працуем па панядзелкам з 15 да 21, але графік можа змяняцца. Глядзіце <a href="#" target="_blank">каляндар</a>.</li>
+</ol>
+
+<h4>Як атрымаць тавар праз пошту?</h4>
+<ol>
+        <li>абірайце тавары,</li>
+        <li>праз форму <a href="contact.html" target="_blank">"Звязацца з намі"</a> адпраўляеце сваю замову,</li>
+        <li>мы звяжамся з вамі і пацвердзім наяўнасць і замову з улікам дастаўкі поштай.</li>
+        <li>вы робіце аплату на рахунак такі-та.</li>
+        <li>як толькі мы атрымліваем аплату, што-тыдзень у чацвер адпраўляем праз бел.пошту па абазначанаму вамі адрасу.</li>
+</ol>
+
+<h4>Якія спосабы аплаты вы маеце</h4>
+<ol>
+        <li>аплата наяўнымі пра заборы замовы,</li>
+        <li>аллата праз картку пасля удаклданення замовы</li>
+</ol>
+
+<h4>Колькі каштуе дастаўка па Беларусі?</h4>
+
+<ul>
+        <li>да 100 гр. - 2 рублі</li>
+	<li>да 200 гр. - 3 рублі</li>
+</ul>
+
+<h4>Як аформіць замову?</h4>
+<p>У поле "Паведамленне" на старонцы "Звязацца з намі" пазначце наступныя звесткі:</p>
+<ol>
+        <li>дакладную назву тавара</li>
+	<li>колькасць</li>
+	<li>ваш кантакт (напрыклад, тэлефон)</li>
+	<li>адрас, калі вы чакаеце тавар па пошце.</li>
+</ol>
+               
+
+
             </div>
             <div class="col-md-6">
                 <img class="img-responsive" src="http://placehold.it/700x450" alt="">
