--- a/about.html
+++ b/about.html
@@ -67,17 +67,6 @@
     </nav>
 
 
-    <!-- Image Background Page Header -->
-    <!-- Note: The background image is set within the business-casual.css file. -->
-    <header class="business-header">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h1 class="tagline">Пра праект</h1>
-                </div>
-            </div>
-        </div>
-    </header>
 
 
 
@@ -90,18 +79,15 @@
             <div class="col-lg-12">
                 <h2 class="page-header">Місія праекта</h2>
             </div>
-            <div class="col-md-6">
-                <p>The Modern Business template by Start Bootstrap includes:</p>
-                <ul>
-                    <li><strong>Bootstrap v3.3.7</strong>
-                    </li>
-                    <li>jQuery v1.11.1</li>
-                    <li>Font Awesome v4.2.0</li>
-                    <li>Working PHP contact form with validation</li>
-                    <li>Unstyled page elements for easy customization</li>
-                    <li>17 HTML pages</li>
-                </ul>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, omnis doloremque non cum id reprehenderit, quisquam totam aspernatur tempora minima unde aliquid ea culpa sunt. Reiciendis quia dolorum ducimus unde.</p>
+            <div class="col-md-6">               
+                <p>Мы - гік-лаўка! Калі вы штосці замаўляеце у нас, магчыма вы ведаеце, што гэта не наш <a href="https://falanster.by" terget="_blank">асноўны занятак</a>. Калі ласка насалоджвайцеся нашымі няшнымі прадуктамі і часам вяртайцеся за навінкамі ў гік-лаўку.
+<p>
+Увесь наш асартымент магчыма зрабіць самастойна, скачаўшы зыходнікі з гітхаба.</p>
+<p>
+Не бойцеся! Вы ў харашых руках.</p>
+<p>
+Кахай і гіч,
+каманда Гік-лаўкі</p>
             </div>
             <div class="col-md-6">
                 <img class="img-responsive" src="http://placehold.it/700x450" alt="">
