add subscription, notifications, footer

--- a/tos.html
+++ b/tos.html
@@ -130,7 +130,7 @@
 </ul>
 
 <h4>Як аформіць замову?</h4>
-<p>У поле "Паведамленне" на старонцы "Звязацца з намі" пазначце наступныя звесткі:</p>
+<p>У поле "Паведамленне" на старонцы <a href="contact.html" target="_blank">"Звязацца з намі"</a> пазначце наступныя звесткі:</p>
 <ol>
         <li>дакладную назву тавара</li>
 	<li>колькасць</li>
