--- a/contact.html
+++ b/contact.html
@@ -98,29 +98,29 @@
                     <form name="sentMessage" action="mail/contact-me.php" id="contactForm" novalidate>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label for="name">Name</label>
-                                <input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Please enter your name.">
+                                <label for="name">Імя</label>
+                                <input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Калі ласка увядзіце ваша імя.">
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label for="email">Email Address</label>
-                                <input type="email" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
+                                <label for="email">Імэйл</label>
+                                <input type="email" class="form-control" placeholder="Імэйл" id="email" required data-validation-required-message="калі ласка увядзіце ваш імэйл адрас.">
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label for="phone">Phone Number</label>
-                                <input type="tel" class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="Please enter your phone number.">
+                                <label for="phone">Нумар тэлефона</label>
+                                <input type="tel" class="form-control" placeholder="Нумар тэлефона" id="phone" required data-validation-required-message="калі ласка увядзіце нумар тэлефона.">
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label for="message">Message</label>
-                                <textarea rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
+                                <label for="message">Паведамленне</label>
+                                <textarea rows="5" class="form-control" placeholder="Паведамленне" id="message" required data-validation-required-message="Калі ласка ўвядзіце паведамленне."></textarea>
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
@@ -128,7 +128,7 @@
                         <div id="success"></div>
                         <div class="row">
                             <div class="form-group col-xs-12">
-                                <button type="submit" class="btn btn-success btn-lg">Send</button>
+                                <button type="submit" class="btn btn-success btn-lg">Адправіць</button>
                             </div>
                         </div>
                     </form>
