--- a/index.html
+++ b/index.html
@@ -264,8 +264,8 @@
 
 
 <div id="mce-responses" class="clear">
-		<div class="response" id="mce-error-response" style="display:none"></div>
-		<div class="response" id="mce-success-response" style="display:none"></div>
+		<div class="response alert alert-success" id="mce-error-response" style="display:none"> <strong>Поспех!</strong></div>
+		<div class="response alert alert-danger" id="mce-success-response" style="display:none"> <strong>Памылка!</strong></div>
 	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
         <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_a85c8705ea30c06ccde479258_19b97f6d12" tabindex="-1" value=""></div>
 
@@ -292,7 +292,13 @@
         <!-- Footer -->
         <footer>
             <div class="row">
-                <div class="col-lg-12">
+          
+      <div class="col-md-4">
+		    <p>Гік-лаўка 2017 - <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">CC BY SA 4.0</a></p>
+</div>
+
+
+<div class="col-md-8">
                     <ul class="nav navbar-nav navbar-right">
                     <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
                     <li>
