link pages and rename files

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link href="fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
     <!-- Custom CSS -->
-    <link href="css/scrolling-nav.css" rel="stylesheet">
+    <link href="css/custom.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -42,7 +42,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand page-scroll" href="index.html">
                     <img src="images/geek_lauka_logo.png" width="50" alt="">
                 </a>
                 <!--<a class="navbar-brand page-scroll" href="#">Гік-лаўка</a>-->
@@ -60,9 +60,6 @@
                     </li>
                     <li>
                         <a class="page-scroll" href="#padpiska">Падпіска</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="https://falanster.by" target="_blank">Вялікі брат</a>
                     </li>
                 </ul>
             </div>
@@ -260,12 +257,12 @@
         <label class="sr-only" for="inputEmail">Прозвішча</label>
 	<input type="text" value="" name="LNAME" class="form-control" id="mce-LNAME"  placeholder="Прозвішча">
     </div>
-    <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-lg btn-default">
+    <input type="submit" value="Падпісацца" name="subscribe" id="mc-embedded-subscribe" class="btn btn-lg btn-default">
 
 
 <div id="mce-responses" class="clear">
-		<div class="response alert alert-success" id="mce-error-response" style="display:none"> <strong>Поспех!</strong></div>
-		<div class="response alert alert-danger" id="mce-success-response" style="display:none"> <strong>Памылка!</strong></div>
+		<div class="response alert alert-success" id="mce-error-response" style="display:none"> <strong>Поспех!</strong> </div>
+		<div class="response alert alert-info" id="mce-success-response" style="display:none"> <strong>Памылка!</strong> </div>
 	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
         <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_a85c8705ea30c06ccde479258_19b97f6d12" tabindex="-1" value=""></div>
 
@@ -332,6 +329,7 @@
     <!-- Scrolling Nav JavaScript -->
     <script src="js/jquery.easing.min.js"></script>
     <script src="js/scrolling-nav.js"></script>
+    <script src="js/jqBootstrapValidation.js"></script> 
     <script src="js/custom.js"></script>
 
 </body>
