--- a/about.html
+++ b/about.html
@@ -9,13 +9,15 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Гік-лаўка - пра праект</title>
+    <title>Гік-лаўка</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
+    <link href="fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+
     <!-- Custom CSS -->
-    <link href="css/scrolling-nav.css" rel="stylesheet">
+    <link href="css/custom.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -40,7 +42,10 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#">Гік-лаўка</a>
+                <a class="navbar-brand page-scroll" href="index.html">
+                    <img src="images/geek_lauka_logo.png" width="50" alt="">
+                </a>
+                <!--<a class="navbar-brand page-scroll" href="#">Гік-лаўка</a>-->
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -51,13 +56,10 @@
                         <a class="page-scroll" href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">Пра нас</a>
+                        <a class="page-scroll" href="about.html">Пра нас</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Падпіска</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#contact">Вялікі брат</a>
+                        <a class="page-scroll" href="#padpiska">Падпіска</a>
                     </li>
                 </ul>
             </div>
@@ -112,35 +114,50 @@
         <!-- /.row -->
 
 
- <!-- Call to Action Section -->
-        <div class="well">
+  <!-- Call to Action Section -->
+        <div class="well" id="padpiska">
             <div class="row">
 
  <div class="col-lg-12">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, expedita, saepe, vero rerum deleniti beatae veniam harum neque nemo praesentium cum alias asperiores commodi.</p>
+                    <p>Падпішыцеся! Мы будзем трымаць вас у курсе пра абнаўленні асартымента, зніжкі, акцыі і наогул жыццё нашай <a href="https://falanster.by" target="_blank">суполкі</a>. Рассылка адбываецца не часцей чым раз на месяц.</p>
                 </div>
 
 
                 <div class="col-lg-12">
 
-<form class="form-inline">
+
+<form action="//falanster.us6.list-manage.com/subscribe/post?u=a85c8705ea30c06ccde479258&amp;id=19b97f6d12" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate form-inline" target="_blank" novalidate>
+
     <div class="form-group input-group-lg">
         <label class="sr-only" for="inputEmail">Email*</label>
-        <input type="email" class="form-control" id="inputEmail" placeholder="Email*">
+	<input type="email" value="" name="EMAIL" class="required email form-control" id="mce-EMAIL" placeholder="Email*">
     </div>
 
     <div class="form-group input-group-lg">
         <label class="sr-only" for="inputEmail">Імя</label>
-        <input type="email" class="form-control" id="inputEmail" placeholder="Імя">
+	<input type="text" value="" name="FNAME" class="form-control" id="mce-FNAME" placeholder="Імя">
     </div>
 
     <div class="form-group input-group-lg">
         <label class="sr-only" for="inputEmail">Прозвішча</label>
-        <input type="email" class="form-control" id="inputEmail" placeholder="Прозвішча">
+	<input type="text" value="" name="LNAME" class="form-control" id="mce-LNAME"  placeholder="Прозвішча">
     </div>
-       
-    <button type="submit" class="btn btn-lg btn-default">Падпісацца</button>
+    <input type="submit" value="Падпісацца" name="subscribe" id="mc-embedded-subscribe" class="btn btn-lg btn-default">
+
+
+<div id="mce-responses" class="clear">
+		<div class="response alert alert-success" id="mce-error-response" style="display:none"> <strong>Поспех!</strong> </div>
+		<div class="response alert alert-info" id="mce-success-response" style="display:none"> <strong>Памылка!</strong> </div>
+	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+        <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_a85c8705ea30c06ccde479258_19b97f6d12" tabindex="-1" value=""></div>
+
+<!--	<button type="submit" class="btn btn-lg btn-default">Падпісацца</button>-->
 </form>
+
+
+<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+<!--End mc_embed_signup-->
+
 
                 </div>
             </div>
@@ -157,17 +174,26 @@
         <!-- Footer -->
         <footer>
             <div class="row">
-                <div class="col-lg-12">
+          
+      <div class="col-md-4">
+		    <p>Гік-лаўка 2017 - <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">CC BY SA 4.0</a></p>
+</div>
+
+
+<div class="col-md-8">
                     <ul class="nav navbar-nav navbar-right">
                     <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
                     <li>
-                        <a class="page-scroll" href="#about">Пра нас</a>
+                        <a class="page-scroll" href="about.html">Пра нас</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">FAQ</a>
+                        <a class="page-scroll" href="tos.html#faq">FAQ</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Правілы сайта</a>
+                        <a class="page-scroll" href="tos.html#rule">Правілы сайта</a>
+                    </li>
+		    <li>
+                        <a class="page-scroll" href="contact.html">Кантакт</a>
                     </li>
                 </ul>
                 </div>
@@ -177,7 +203,7 @@
     </div>
     <!-- /.container -->
 
- 
+    <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>  
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
@@ -188,6 +214,8 @@
     <!-- Scrolling Nav JavaScript -->
     <script src="js/jquery.easing.min.js"></script>
     <script src="js/scrolling-nav.js"></script>
+    <script src="js/jqBootstrapValidation.js"></script> 
+    <script src="js/custom.js"></script>
 
 </body>
 
