--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Гік-лаўка - Звязацца з намі</title>
+    <title>Гік-лаўка</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -17,7 +17,7 @@
     <link href="fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
     <!-- Custom CSS -->
-    <link href="css/scrolling-nav.css" rel="stylesheet">
+    <link href="css/custom.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -42,7 +42,10 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#">Гік-лаўка</a>
+                <a class="navbar-brand page-scroll" href="index.html">
+                    <img src="images/geek_lauka_logo.png" width="50" alt="">
+                </a>
+                <!--<a class="navbar-brand page-scroll" href="#">Гік-лаўка</a>-->
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -53,13 +56,10 @@
                         <a class="page-scroll" href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">Пра нас</a>
+                        <a class="page-scroll" href="about.html">Пра нас</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Падпіска</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#contact">Вялікі брат</a>
+                        <a class="page-scroll" href="#padpiska">Падпіска</a>
                     </li>
                 </ul>
             </div>
@@ -67,6 +67,7 @@
         </div>
         <!-- /.container -->
     </nav>
+
 
 <!-- Page Content -->
     <div class="container">
@@ -99,7 +100,7 @@
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label for="name">Імя</label>
-                                <input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Калі ласка увядзіце ваша імя.">
+                                <input type="text" class="form-control" placeholder="Імя" id="name" required data-validation-required-message="Калі ласка увядзіце ваша імя.">
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
@@ -140,24 +141,33 @@
      </div>
 
 
- <div class="container">
+<div class="container">
 
         <hr>
 
         <!-- Footer -->
         <footer>
             <div class="row">
-                <div class="col-lg-12">
+          
+      <div class="col-md-4">
+		    <p>Гік-лаўка 2017 - <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">CC BY SA 4.0</a></p>
+</div>
+
+
+<div class="col-md-8">
                     <ul class="nav navbar-nav navbar-right">
                     <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
                     <li>
-                        <a class="page-scroll" href="#about">Пра нас</a>
+                        <a class="page-scroll" href="about.html">Пра нас</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">FAQ</a>
+                        <a class="page-scroll" href="tos.html#faq">FAQ</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Правілы сайта</a>
+                        <a class="page-scroll" href="tos.html#rule">Правілы сайта</a>
+                    </li>
+		    <li>
+                        <a class="page-scroll" href="contact.html">Кантакт</a>
                     </li>
                 </ul>
                 </div>
@@ -167,7 +177,7 @@
     </div>
     <!-- /.container -->
 
- 
+    <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>  
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
