link pages and rename files

--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
                 <h2 class="page-header">Місія праекта</h2>
             </div>
             <div class="col-md-6">               
-                <p>Мы - гік-лаўка! Калі вы штосці замаўляеце у нас, магчыма вы ведаеце, што гэта не наш <a href="https://falanster.by" terget="_blank">асноўны занятак</a>. Калі ласка насалоджвайцеся нашымі няшнымі прадуктамі і часам вяртайцеся за навінкамі ў гік-лаўку.
+                <p>Мы - гік-лаўка! Калі вы штосці замаўляеце у нас, магчыма вы ведаеце, што гэта не наш <a href="https://falanster.by" target="_blank">асноўны занятак</a>. Калі ласка насалоджвайцеся нашымі няшнымі прадуктамі і часам вяртайцеся за навінкамі ў гік-лаўку.
 <p>
 Увесь наш асартымент магчыма зрабіць самастойна, скачаўшы зыходнікі з гітхаба.</p>
 <p>
