added meta destription and files for prodict + mailing encoding

--- a/about.html
+++ b/about.html
@@ -6,10 +6,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Крама для гікаў ад супольнасці Фаланстэр">
+    <meta name="author" content="гік, фаланстэр, супольнасць, мэрчэндайз, свэг, налепкі, майкі, кубкі">
 
-    <title>Гік-лаўка</title>
+    <title>Гік-лаўка. Пра нашу каманду і прынцыпы.</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -79,17 +79,17 @@
  <!-- Features Section -->
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="page-header">Місія праекта</h2>
+                <h2 class="page-header">Пра нас</h2>
             </div>
             <div class="col-md-6">               
-                <p>Мы - гік-лаўка! Калі вы штосці замаўляеце у нас, магчыма вы ведаеце, што гэта не наш <a href="https://falanster.by" target="_blank">асноўны занятак</a>. Калі ласка насалоджвайцеся нашымі няшнымі прадуктамі і часам вяртайцеся за навінкамі ў гік-лаўку.
+                <p>Мы - гік-лаўка! Калі вы штосці замаўляеце у нас, магчыма вы ведаеце, што гэта не наш <a href="https://falanster.by" target="_blank">асноўны занятак</a>. Прыбытак лаўкі ідзе на падтрыманне дзейнасці Фаланстэра. Калі ласка насалоджвайцеся нашымі няшнымі прадуктамі і часам вяртайцеся за навінкамі ў гік-лаўку.
 <p>
 Увесь наш асартымент магчыма зрабіць самастойна, скачаўшы зыходнікі з гітхаба.</p>
 <p>
 Не бойцеся! Вы ў харашых руках.</p>
 <p>
 Кахай і гіч,
-каманда Гік-лаўкі</p>
+<br />каманда Гік-лаўкі</p>
             </div>
             <div class="col-md-6">
                 <img class="img-responsive" src="http://placehold.it/700x450" alt="">
