--- a/contact.html
+++ b/contact.html
@@ -6,10 +6,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Замовіць тавар, звязацца з камандай гік-лаўкі.">
+    <meta name="author" content="кантакт, звязацца, каманда гік-лаўкі, замовіць тавар">
 
-    <title>Гік-лаўка</title>
+    <title>Гік-лаўка. Звязацца з намі і замовіць тавар.</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
