--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="набыць тавары для гіка, нэрда, айцішніка: налепкі, паштоўкі, плакаты, майкі, торбы, значкі, creative commons">
+    <meta name="author" content="налепкі, паштоўкі, плакаты, майкі, торбы, значкі, creative commons">
 
-    <title>Гік-лаўка</title>
+    <title>Гік-лаўка. Тавары для гіка ад супольнасці Фаланстэра</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -93,15 +93,15 @@
             <div class="row">
                 <div class="col-lg-12">
 
-			<h2 class="page-header">Для пачатку працы крамы збіраем замоваў на суму 100 рублёў</h2>
+			<h2 class="page-header">Для пачатку працы крамы збіраем (прад)замоваў на суму 100 рублёў</h2>
 
 			<div class="caption">
 						        <h3 class="pull-right">100 рублёў для старта</h3>
 						        <h3>Замаўляй нішцякі!</h3>
 					</div>  
 			<div class="progress">
-			  <div class="progress-bar progress-bar-success" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
-				Сабрана 35 рублёў. Паднажмем!
+			  <div class="progress-bar progress-bar-success" role="progressbar" style="width: 27%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+				Замоўлена на 27 рублёў. Паднажмем!
 			  </div>
 			</div>
                 </div>
