--- a/product-5.html
+++ b/product-5.html
@@ -6,10 +6,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Як працуе Гіка-Лаўка, замова тавара, дастаўка, спосабы аплаты, кошты дастаўкі">
-    <meta name="author" content="замова тавара, дастаўка, спосабы аплаты, кошты дастаўкі">
+    <meta name="description" content="Налепкі на ноўтбук, на лэптоп, на планшэт, на мабільнік, на лядоўню, на халадзільнік, наклейкі.">
+    <meta name="author" content="">
 
-    <title>Гік-лаўка. Правілы, дастаўка, аплата.</title>
+    <title>Гік-лаўка</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -68,83 +68,47 @@
         <!-- /.container -->
     </nav>
 
-
-    <!-- Image Background Page Header -->
-    <!-- Note: The background image is set within the business-casual.css file.
-    <header class="business-header">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h1 class="tagline">Правілы сайта</h1>
-                </div>
-            </div>
-        </div>
-    </header> -->
-
-
-
 <!-- Page Content -->
     <div class="container">
 
 
- <!-- Features Section -->
+
+        <!-- Portfolio Item Heading -->
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="page-header" id="rule">Як мы працуем</h2>
+<div class="caption-product">
+		<h1 class="pull-right">100 руб.</h1>
+                <h1 class="page-header">Тавар такіта... 
+                    <small>Зніжкі!</small>
+                </h1>
+</div>
             </div>
-            <div class="col-md-6">
+        </div>
+        <!-- /.row -->
 
-<h3 id="faq">Правілы</h3>
+        <!-- Portfolio Item Row -->
+        <div class="row">
 
-<p>Мы хочам шчаслівых спажыўцоў. Калі вы лічыце што нешта вам не падыходзіць мы гатовы памяняць на іншы. Толькі зкантактуйцеся з намі, і мы дапаможам вырашыць сітуацыю.</p>
-
-<h3>Частыя пытанні</h3>
-
-<h4>Ці магчыма атрымаць тавар у рэале? Так.</h4>
-<ol>
-        <li>Абірайце тавары.</li>
-	<li>Праз форму <a href="contact.html" target="_blank">"Звязацца з намі"</a> адпраўляеце сваю замову.</li>
-	<li>Пасля мы звяжамся з вамі і пацвердзім наяўнасць тавараў.</li>
-	<li>Забраць тавар можна па <a href="https://falanster.by/be/kantakt" target="_blank">адрасе</a>. Мінск, вул. Захарава 77а, пам 2б</li>
-	<li>Звычайна мы працуем па панядзелках з 15 да 21, але графік можа змяняцца. Глядзіце <a href="#" target="_blank">наш каляндар</a>.</li>
-</ol>
-
-<h4>Як атрымаць тавар праз пошту?</h4>
-<ol>
-        <li>Абірайце тавары.</li>
-        <li>Праз форму <a href="contact.html" target="_blank">"Звязацца з намі"</a> адпраўляеце сваю замову.</li>
-        <li>Мы звяжамся з вамі і пацвердзім наяўнасць і замову з улікам дастаўкі поштай.</li>
-        <li>Вы робіце аплату на рахунак такі-та.</li>
-        <li>Як толькі мы атрымліваем аплату, штотыдзень, у чацвер адпраўляем праз белпошту па абазначанаму вамі адрасу.</li>
-</ol>
-
-<h4>Якія спосабы аплаты вы маеце?</h4>
-<ol>
-        <li>Магчыма аплата наяўнымі пры атрыманні тавара,</li>
-        <li>або аллата праз картку пасля удакладанення замовы на пошце.</li>
-</ol>
-
-<h4>Колькі каштуе дастаўка па Беларусі?</h4>
-
-<ul>
-        <li>да 100 гр. - 2 рублі</li>
-	<li>да 200 гр. - 3 рублі</li>
-</ul>
-
-<h4>Як аформіць замову?</h4>
-<p>У поле "Паведамленне" на старонцы <a href="contact.html" target="_blank">"Звязацца з намі"</a> пазначце наступныя звесткі:</p>
-<ol>
-        <li>дакладную назву тавара,</li>
-	<li>колькасць,</li>
-	<li>ваш кантакт (напрыклад, тэлефон),</li>
-	<li>адрас (калі чакаеце атрымаць тавар па пошце).</li>
-</ol>
-               
-
+            <div class="col-md-8">
+                <p><img class="img-responsive" src="http://placehold.it/750x500" alt=""></p>
+		<p><img class="img-responsive" src="http://placehold.it/750x500" alt=""></p>
+		<p><img class="img-responsive" src="http://placehold.it/750x500" alt=""></p>
             </div>
-            <div class="col-md-6">
-                <img class="img-responsive" src="http://placehold.it/700x450" alt="">
+
+            <div class="col-md-4">
+                <h3>Апісанне!!!</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.</p>
+		<h4><a href="#"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a></h4>
+                <h3>Project Details</h3>
+                <ul>
+                    <li>Lorem Ipsum</li>
+                    <li>Dolor Sit Amet</li>
+                    <li>Consectetur</li>
+                    <li>Adipiscing Elit</li>
+                </ul>
+		<a href="#" class="btn btn-lg btn-default">Замовіць тавар</a>
             </div>
+
         </div>
         <!-- /.row -->
 
@@ -155,6 +119,35 @@
 
  <div class="container">
 
+
+ <div class="row">
+            <div class="col-lg-12">
+                <h2 class="page-header">Можа зацікавіць</h2>
+            </div>
+            <div class="col-md-4 col-sm-6">
+                <a href="portfolio-item.html">
+                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
+                </a>
+            </div>
+            <div class="col-md-4 col-sm-6">
+                <a href="portfolio-item.html">
+                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
+                </a>
+            </div>
+            <div class="col-md-4 col-sm-6">
+                <a href="portfolio-item.html">
+                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
+                </a>
+            </div>           
+        </div>
+        <!-- /.row -->
+
+
+
+
+
+
+
         <!-- Page Sub Header -->
         <div class="row">
             <div class="col-lg-12">
@@ -163,7 +156,6 @@
             </div>
         </div>
         <!-- /.row -->
-
 
  <!-- Call to Action Section -->
         <div class="well" id="padpiska">
@@ -216,6 +208,7 @@
 
 
 </div>
+
 
 <div class="container">
 
