--- a/product-3.html
+++ b/product-3.html
@@ -106,7 +106,7 @@
                     <li>Consectetur</li>
                     <li>Adipiscing Elit</li>
                 </ul>
-		<a href="#" class="btn btn-lg btn-default">Замовіць тавар</a>
+		<a href="contact.html" class="btn btn-lg btn-default">Замовіць тавар</a>
             </div>
 
         </div>
