--- a/product-1.html
+++ b/product-1.html
@@ -6,8 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Паштоўкі для айцішніка, для камп'ютаршчыка, для гіка, для нерда, паштоўкі адміну, паштоўкі праграмісту, паштоўкі студэнту, беларускія паштоўкі, на дзень народзінаў, на свята.">
-    <meta name="author" content="">
+    <meta name="description" content="адкрыты код, open source, shell, bash, linux, лінукс, беларускія паштоўкі, паштоўкі для айцішніка, для камп'ютаршчыка, для гіка, для нерда, паштоўкі адміну, паштоўкі праграмісту, паштоўкі студэнту, беларускія паштоўкі, на дзень народзінаў, на свята">
 
     <title>Гік-лаўка</title>
 
@@ -78,8 +77,8 @@
             <div class="col-lg-12">
 <div class="caption-product">
 		<h1 class="pull-right">100 руб.</h1>
-                <h1 class="page-header">Тавар такіта... 
-                    <small>Зніжкі!</small>
+                <h1 class="page-header">Кансольныя паштоўкі 
+
                 </h1>
 </div>
             </div>
@@ -96,16 +95,9 @@
             </div>
 
             <div class="col-md-4">
-                <h3>Апісанне!!!</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.</p>
-		<h4><a href="#"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a></h4>
-                <h3>Project Details</h3>
-                <ul>
-                    <li>Lorem Ipsum</li>
-                    <li>Dolor Sit Amet</li>
-                    <li>Consectetur</li>
-                    <li>Adipiscing Elit</li>
-                </ul>
+                <p>Для шчыра закаханых у кансоль і open source.</p>
+		<h4><a href="https://github.com/svetit/2016-postcards-console" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a></h4>
+
 		<a href="#" class="btn btn-lg btn-default">Замовіць тавар</a>
             </div>
 
