--- a/product-5.html
+++ b/product-5.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Налепкі на ноўтбук, на лэптоп, на планшэт, на мабільнік, на лядоўню, на халадзільнік, наклейкі.">
-    <meta name="author" content="">
+    <meta name="description" content="гік, git, налепкі, наклейкі, налепкі на ноўтбук, на лэптоп, на планшэт, на мабільнік, на лядоўню, на халадзільнік, наклейкі.">
+
 
     <title>Гік-лаўка</title>
 
@@ -78,8 +78,8 @@
             <div class="col-lg-12">
 <div class="caption-product">
 		<h1 class="pull-right">100 руб.</h1>
-                <h1 class="page-header">Тавар такіта... 
-                    <small>Зніжкі!</small>
+                <h1 class="page-header">Налепкі для гікаў (класічныя) 
+
                 </h1>
 </div>
             </div>
@@ -96,16 +96,10 @@
             </div>
 
             <div class="col-md-4">
-                <h3>Апісанне!!!</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.</p>
-		<h4><a href="#"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a></h4>
-                <h3>Project Details</h3>
-                <ul>
-                    <li>Lorem Ipsum</li>
-                    <li>Dolor Sit Amet</li>
-                    <li>Consectetur</li>
-                    <li>Adipiscing Elit</li>
-                </ul>
+
+                <p>Налепкі, якія раскрываюць каштоўнасці гіка, для аматараў git.</p>
+		<h4><a href="https://github.com/diglabby/design/tree/master/sticker/stickers-2" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a></h4>
+
 		<a href="contact.html" class="btn btn-lg btn-default">Замовіць тавар</a>
             </div>
 
