add title name for each goods

--- a/product-1.html
+++ b/product-1.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="адкрыты код, open source, shell, bash, linux, лінукс, беларускія паштоўкі, паштоўкі для айцішніка, для камп'ютаршчыка, для гіка, для нерда, паштоўкі адміну, паштоўкі праграмісту, паштоўкі студэнту, беларускія паштоўкі, на дзень народзінаў, на свята">
 
-    <title>Гік-лаўка</title>
+    <title>Гік-лаўка - Кансольныя паштоўкі</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
