--- a/product-3.html
+++ b/product-3.html
@@ -9,7 +9,7 @@
     <meta name="description" content="незвычайныя паштоўкі, нестандартныя паштоўкі, адметныя паштоўкі, унікальныя паштоўкі, беларускія паштоўкі, паштоўкі для айцішніка, для камп'ютаршчыка, для гіка, для нерда, паштоўкі адміну, паштоўкі праграмісту, паштоўкі студэнту, беларускія паштоўкі, на дзень народзінаў, на свята">
 
 
-    <title>Гік-лаўка</title>
+    <title>Гік-лаўка - Эксперыментальныя паштоўкі</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
