--- a/product-5.html
+++ b/product-5.html
@@ -9,7 +9,7 @@
     <meta name="description" content="гік, git, налепкі, наклейкі, налепкі на ноўтбук, на лэптоп, на планшэт, на мабільнік, на лядоўню, на халадзільнік, наклейкі.">
 
 
-    <title>Гік-лаўка</title>
+    <title>Гік-лаўка - Налепкі для гікаў</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -78,8 +78,8 @@
             <div class="col-lg-12">
 <div class="caption-product">
 		<h1 class="pull-right">100 руб.</h1>
-                <h1 class="page-header">Налепкі для гікаў (класічныя) 
-
+                <h1 class="page-header">Налепкі для гікаў 
+		<small>класічныя</small>
                 </h1>
 </div>
             </div>
