--- a/product-6.html
+++ b/product-6.html
@@ -9,7 +9,7 @@
     <meta name="description" content="мэш, mesh, налепкі, наклейкі, налепкі для адміна, на беларускай мове, вай фай, wi fi, налепкі на ноўтбук, на лэптоп, на планшэт, на мабільнік, на лядоўню, на халадзільнік, наклейкі">
 
 
-    <title>Гік-лаўка</title>
+    <title>Гік-лаўка - Мэш-налепкі</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
