--- a/product-8.html
+++ b/product-8.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Сумачкі гарадскія, для прадуктаў, сумкі, з натуральнай тканіны, джут">
 
-    <title>Гік-лаўка - Сумкі</title>
+    <title>Гік-лаўка - Сумкі Creative Commons</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
