--- a/product-2.html
+++ b/product-2.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Вікіпедыя, Беларусь, Гік-Лаўка, паштоўкі з краявідамі, беларускія паштоўкі, паштоўкі для айцішніка, для камп'ютаршчыка, для гіка, для нерда, паштоўкі адміну, паштоўкі праграмісту, паштоўкі студэнту, беларускія паштоўкі, на дзень народзінаў, на свята">
 
-    <title>Гік-лаўка</title>
+    <title>Гік-лаўка - Вікі-паштоўкі</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
