--- a/product-4.html
+++ b/product-4.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="налепкі, наклейкі, на беларускай мове, creative commons, адкрытыя ліцэнзіі,налепкі на ноўтбук, на лэптоп, на планшэт, на мабільнік, на лядоўню, на халадзільнік, наклейкі">
 
-    <title>Гік-лаўка</title>
+    <title>Гік-лаўка - Налепкі для Смачнай Твочасці</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -77,7 +77,7 @@
             <div class="col-lg-12">
 <div class="caption-product">
 		<h1 class="pull-right">100 руб.</h1>
-                <h1 class="page-header">Налепкі для Смачнай Твочасці 
+                <h1 class="page-header">Налепкі для Смачнай Твочасці
 
                 </h1>
 </div>
