title for front page

--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
 
             <div class="col-md-4 portfolio-item">
 		<div class="caption">
-                                <h3 class="pull-right">$74.99</h3>
-                                <h3><a href="product-1.html">Назва тавара</a>
+                                <h3 class="pull-right">2 рублі</h3>
+                                <h3><a href="product-1.html">Кансольныя паштоўкі</a>
                                 </h3>
                 </div>                
 
@@ -139,10 +139,12 @@
 
             </div>
 
+
+
             <div class="col-md-4 portfolio-item">
 		<div class="caption">
                                 <h3 class="pull-right">$74.99</h3>
-                                <h3><a href="product-2.html">Назва тавара</a>
+                                <h3><a href="product-7.html">Роварныя налепкі</a>
                                 </h3>
                 </div>                
 
@@ -155,7 +157,7 @@
             <div class="col-md-4 portfolio-item">
 		<div class="caption">
                                 <h3 class="pull-right">$74.99</h3>
-                                <h3><a href="product-3.html">Назва тавара</a>
+                                <h3><a href="product-4.html">Налепкі для Смачнай Твочасці</a>
                                 </h3>
                 </div>                
 
@@ -175,7 +177,7 @@
 <div class="col-md-4 portfolio-item">
 		<div class="caption">
                                 <h3 class="pull-right">$74.99</h3>
-                                <h3><a href="product-4.html">Назва тавара</a>
+                                <h3><a href="product-8.html">Сумкі Creative Commons</a>
                                 </h3>
                 </div>                
 
@@ -188,7 +190,7 @@
             <div class="col-md-4 portfolio-item">
 		<div class="caption">
                                 <h3 class="pull-right">$74.99</h3>
-                                <h3><a href="product-5.html">Назва тавара</a>
+                                <h3><a href="product-2.html">Вікі-паштоўкі</a>
                                 </h3>
                 </div>                
 
@@ -201,7 +203,7 @@
             <div class="col-md-4 portfolio-item">
 		<div class="caption">
                                 <h3 class="pull-right">$74.99</h3>
-                                <h3><a href="product-6.html">Назва тавара</a>
+                                <h3><a href="product-5.html">Налепкі для гікаў </a>
                                 </h3>
                 </div>                
 
