--- a/product-4.html
+++ b/product-4.html
@@ -42,7 +42,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand page-scroll" href="index.html">
-                    <img src="images/geek_lauka_logo.png" width="50" alt="">
+                    <img src="images/geek_lauka_logo.png" alt="">
                 </a>
                 <!--<a class="navbar-brand page-scroll" href="#">Гік-лаўка</a>-->
             </div>
