favicon added to all pages

--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
     <meta name="author" content="гік, фаланстэр, супольнасць, мэрчэндайз, свэг, налепкі, майкі, кубкі">
 
     <title>Гік-лаўка. Пра нашу каманду і прынцыпы.</title>
+    <link rel="shortcut icon" type="image/png" href="images/geek_lauka_favicon.png"/>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
