--- a/product-2.html
+++ b/product-2.html
@@ -9,6 +9,7 @@
     <meta name="description" content="Вікіпедыя, Беларусь, Гік-Лаўка, паштоўкі з краявідамі, беларускія паштоўкі, паштоўкі для айцішніка, для камп'ютаршчыка, для гіка, для нерда, паштоўкі адміну, паштоўкі праграмісту, паштоўкі студэнту, беларускія паштоўкі, на дзень народзінаў, на свята">
 
     <title>Гік-лаўка - Вікі-паштоўкі</title>
+    <link rel="shortcut icon" type="image/png" href="images/geek_lauka_favicon.png"/>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
