--- a/product-4.html
+++ b/product-4.html
@@ -9,6 +9,7 @@
     <meta name="description" content="налепкі, наклейкі, на беларускай мове, creative commons, адкрытыя ліцэнзіі,налепкі на ноўтбук, на лэптоп, на планшэт, на мабільнік, на лядоўню, на халадзільнік, наклейкі">
 
     <title>Гік-лаўка - Налепкі для Смачнай Твочасці</title>
+    <link rel="shortcut icon" type="image/png" href="images/geek_lauka_favicon.png"/>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
