--- a/product-7.html
+++ b/product-7.html
@@ -9,6 +9,7 @@
     <meta name="description" content="Роварныя налепкі на ровар або ноут. Неклейкі на веласіпед">
 
     <title>Гік-лаўка - Роварныя налепкі</title>
+    <link rel="shortcut icon" type="image/png" href="images/geek_lauka_favicon.png"/>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
