--- a/product-8.html
+++ b/product-8.html
@@ -9,6 +9,7 @@
     <meta name="description" content="Сумачкі гарадскія, для прадуктаў, сумкі, з натуральнай тканіны, джут">
 
     <title>Гік-лаўка - Сумкі Creative Commons</title>
+    <link rel="shortcut icon" type="image/png" href="images/geek_lauka_favicon.png"/>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
