--- a/tos.html
+++ b/tos.html
@@ -10,6 +10,7 @@
     <meta name="author" content="замова тавара, дастаўка, спосабы аплаты, кошты дастаўкі">
 
     <title>Гік-лаўка. Правілы, дастаўка, аплата.</title>
+    <link rel="shortcut icon" type="image/png" href="images/geek_lauka_favicon.png"/>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
