--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
     <meta name="author" content="кантакт, звязацца, каманда гік-лаўкі, замовіць тавар">
 
     <title>Гік-лаўка. Звязацца з намі і замовіць тавар.</title>
+    <link rel="shortcut icon" type="image/png" href="images/geek_lauka_favicon.png"/>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
