--- a/product-1.html
+++ b/product-1.html
@@ -9,6 +9,7 @@
     <meta name="description" content="адкрыты код, open source, shell, bash, linux, лінукс, беларускія паштоўкі, паштоўкі для айцішніка, для камп'ютаршчыка, для гіка, для нерда, паштоўкі адміну, паштоўкі праграмісту, паштоўкі студэнту, беларускія паштоўкі, на дзень народзінаў, на свята">
 
     <title>Гік-лаўка - Кансольныя паштоўкі</title>
+    <link rel="shortcut icon" type="image/png" href="images/geek_lauka_favicon.png"/>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
