--- a/product-5.html
+++ b/product-5.html
@@ -10,6 +10,7 @@
 
 
     <title>Гік-лаўка - Налепкі для гікаў</title>
+    <link rel="shortcut icon" type="image/png" href="images/geek_lauka_favicon.png"/>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
